--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,20 @@
     />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
     <title>Frontend Mentor | Profile card component</title>
-    <script src="index.js" type="text/jsx"></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <main class="page-container">
-      <img class="topcirc" src="./images/bg-pattern-top.svg" />
-      <img class="botcirc" src="./images/bg-pattern-bottom.svg" />
+      <img
+        class="topcirc"
+        src="./images/bg-pattern-top.svg"
+        aria-hidden="true"
+      />
+      <img
+        class="botcirc"
+        src="./images/bg-pattern-bottom.svg"
+        aria-hidden="true"
+      />
       <div class="card-container">
         <div class="card-header"></div>
         <div id="card"></div>
